[package]
name = "k8s-explorer"
version = "0.1.0"
edition = "2021"
description = "A Kubernetes cluster exploration and discovery tool"
license = "MIT"
repository = "https://github.com/yourusername/k8s-explorer"
keywords = ["kubernetes", "k8s", "cli", "discovery", "exploration"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# Kubernetes client
kube = { version = "0.87", features = ["client", "config"] }
k8s-openapi = { version = "0.20", features = ["latest"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# CLI framework
clap = { version = "4.0", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Output formatting
tabled = "0.15"
colored = "2.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio-test = "0.4"
