[package]
name = "kdx"
version = "0.1.0"
edition = "2021"
description = "K8s Discovery Experience - A command-line tool for exploring Kubernetes clusters"
license = "MIT"
repository = "https://github.com/brannn/kdx"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
kube = { version = "0.87", features = ["client", "ws"] }
k8s-openapi = { version = "0.20", features = ["v1_28"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
tabled = "0.15"
colored = "2.0"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
